Refactored code for better formatting and removed unused imports